deploy/overlays/local/node-test/components/terminology-server-proxy-gateway/terminology-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-terminology-server-proxy-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: terminology.test.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-terminology-server-proxy-route
spec:
  parentRefs:
    - name: test-terminology-server-proxy-gateway
  hostnames:
    - terminology.test.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-terminology-server-proxy
          port: 8080
